# segment_ds

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ElmInt.h  FirstLayerNode.h  LeafDataAVL.h  Makefile  SecondLayerNode.h  Segment.h  SegmentDS.h  TestNode.h  cmake_install.cmake  main.cpp  readme.MD
src/: AbstractNode.h  CMakeLists.txt  ElmInt.cpp  ElmInt.h  FirstLayerNode.cpp  FirstLayerNode.h  LeafDataAVL.cpp  LeafDataAVL.h  Makefile  Node.h  SecondLayerNode.cpp  SecondLayerNode.h  Segment.cpp  Segment.h  SegmentDS.cpp  SegmentDS.h  cmake_install.cmake  node_utils.h
test/: CMakeLists.txt  Makefile  NodeTest.cpp  NodeUtilsTest.cpp  SecondLayerTest.cpp  cmake_install.cmake  run_tests[1]_include.cmake
